[tool.poetry]
name = "asyncclick-repl"
version = "0.1.0"
description = "Command class to add REPL support to existing click groups"
authors = ["Federico Jaite <fede_654_87@hotmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/fedej/asyncclick-repl"


[tool.poetry.dependencies]
python = "^3.7"
asyncclick = "^8.0.1"
prompt-toolkit = "^3.0.19"
anyio = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3"
flake8 = "^5.0.4"
mypy = "^0.961"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
