[tool.poetry]
name = "asyncclick-repl"
version = "0.1.1"
description = "Command class to add REPL support to existing click groups"
authors = ["Federico Jaite <fede_654_87@hotmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/fedej/asyncclick-repl"

[tool.poetry.dependencies]
python = "^3.7"
asyncclick = "^8.1.3.4"
prompt-toolkit = "^3.0.31"
anyio = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
isort = "^5.10.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
