[project]
name = "asyncclick-repl"
dynamic = ["version"]
description = "Command class to add REPL support to existing click groups"
authors = [{ name = "fedej", email = "fede_654_87@hotmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "asyncclick>=8.1.3.4,<9",
    "prompt-toolkit>=3.0.43,<4.0.0",
    "anyio>=4.2.0,<5.0.0",
]

[project.urls]
"Source" = "https://github.com/fedej/aio-rom"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio"
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
